# re-formality

./: .gitignore  Makefile  dune-project  package.json  re-formality-ppx.opam  re-formality.opam  re-formality.opam.template
examples/src/: BlogPostForm.re
lib/: dune  package.json
lib/ppx/: Form_ValidateFormFn.re  Meta.re  dune
lib/src/: FormalityCompat__Form.re  FormalityCompat__FormAsyncOnBlur.re  FormalityCompat__FormAsyncOnBlurWithId.re  FormalityCompat__FormAsyncOnChange.re  FormalityCompat__FormAsyncOnChangeWithId.re  FormalityCompat__PublicHelpers.re  FormalityCompat__PublicHelpers.rei  dune
